--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,19 +1,28 @@
+# Server Configuration
 PORT=5000
-MONGODB_URI=mongodb://localhost:27017/allforyourhealth
-JWT_SECRET=your_jwt_secret_key_here
-JWT_EXPIRES_IN=7d
+NODE_ENV=development
+
+# MongoDB Configuration
+MONGO_URI=mongodb://localhost:27017/allforyourhealth
+
+# JWT Configuration
+JWT_SECRET=your_jwt_secret_here
+JWT_EXPIRE=30d
+
+# Email Configuration
+EMAIL_HOST=smtp.example.com
+EMAIL_PORT=587
+EMAIL_USER=your_email@example.com
+EMAIL_PASS=your_email_password
+EMAIL_FROM=noreply@allforyourhealth.com
+
+# WhatsApp Business API Configuration
+WHATSAPP_API_URL=https://graph.facebook.com
+WHATSAPP_AUTH_TOKEN=your_whatsapp_auth_token
+WHATSAPP_PHONE_NUMBER_ID=your_whatsapp_phone_number_id
 
 # Firebase Configuration
-FIREBASE_TYPE=service_account
-FIREBASE_PROJECT_ID=allforyourhealth
-FIREBASE_PRIVATE_KEY_ID=your_private_key_id
-FIREBASE_PRIVATE_KEY=your_private_key
-FIREBASE_CLIENT_EMAIL=your_client_email
-FIREBASE_CLIENT_ID=your_client_id
-FIREBASE_AUTH_URI=https://accounts.google.com/o/oauth2/auth
-FIREBASE_TOKEN_URI=https://oauth2.googleapis.com/token
-FIREBASE_AUTH_PROVIDER_X509_CERT_URL=https://www.googleapis.com/oauth2/v1/certs
-FIREBASE_CLIENT_X509_CERT_URL=your_client_cert_url
-
-# Google Cloud APIs
-GOOGLE_APPLICATION_CREDENTIALS=path_to_your_google_credentials.json
+FIREBASE_PROJECT_ID=your_firebase_project_id
+FIREBASE_CLIENT_EMAIL=your_firebase_client_email
+FIREBASE_PRIVATE_KEY="your_firebase_private_key"
+FIREBASE_DATABASE_URL=https://your-project-id.firebaseio.com
